# pledgerize-reboot

./: .gitignore  .gitmodules  Generator.h  README.md  additive_pledges.json  commit_viewer.py  commit_windows.json  commits.txt  interesting_files.txt  libc_macros  mine_git.py  modifications.json  modifications.txt  modifications_commit.json  multipledge_files.json  old_regex.txt  pledge_locations.txt  readMethods.py  regex_diff.txt
git-mining/: additive_pledges.json  interesting_commits.txt  mine_git.py  new_regex.txt  pledge_locations.json  readMethods.py
hoisting/: .gitignore  ExternalTestList.md  guardedpledges.txt  investigations.md  notes.md  slaacd-initial-results
hoisting/analysis/: CMakeLists.txt  syscall-web-bitset  syscall_bitset  syscallmacro_syscall
hoisting/analysis/include/: CallGraphAnalyzer.h  ConditionList.h  CustomDataflowAnalysis.h  FutureFunctions.h  Generator.h  Handler.h  InstructionResolver.h  LibEventAnalyzer.h  Printer.h  PromiseDeclarations.h  SocketAnalysis.h  TaintAnalysis.h  runtime.cpp  runtime_no_stdio.cpp
hoisting/analysis/scripts/: clean  examine  histogram_plot.py  run  setup
hoisting/analysis/tools/: CMakeLists.txt
hoisting/benchmarks/: getbenchmarks
hoisting/bugs/bug.cat.loop_load_dependency/: cat_cook_buf.md
hoisting/bugs/bug.cp.call_lifting/: cfg.aborted.copy.dot  description.md  ids.binary  (+3 more)
hoisting/investigations/: benchmarks.md  pledge-types.txt
hoisting/nick-dataflow/: .gitignore  CMakeLists.txt  README.md  compile_commands.json  promise_value  syscall_bitset
hoisting/nick-dataflow/include/: CallGraphAnalyzer.h  ConditionList.h  CustomDataflowAnalysis.h  DataflowAnalysis.h  DataflowAnalysisBackup.h  FutureFunctions.h  Generator.h  Handler.h  IndirectCallResolver.h  OperatorStrings.def  Printer.h  PromiseDeclarations.h  PromiseTree.h
hoisting/nick-dataflow/libc-wp/: all-closures-stripped  all-closures-stripped-sysctl  final-closures  finfo  fprinter  function-bitsets  function-web-bitsets  genEmplace  genEmplaceCustom  genEmplaceDriver  pledge-list  pledge_diffs  readFunctionBitset.py  scratch  temp
hoisting/nick-dataflow/libc-wp/function-closures/: all-closures-stripped-kernel  all-closures-stripped-test  only-nonhidden-closures
hoisting/nick-dataflow/libc-wp/graphs/: Blowfish_decipher  Blowfish_encipher  Blowfish_expand0state  Blowfish_expandstate  Blowfish_initstate  Blowfish_stream2word  MD5Data  MD5End  MD5File  MD5FileChunk  MD5Final  MD5Init  MD5Pad  MD5Transform  MD5Update  RMD160Data  RMD160End  RMD160File  RMD160FileChunk  RMD160Final  RMD160Init  RMD160Pad  RMD160Transform  RMD160Update  SHA1Data  SHA1End  SHA1File  SHA1FileChunk  SHA1Final  SHA1Init  SHA1Pad  SHA1Transform  SHA1Update  SHA224Data  SHA224End  SHA224File  SHA224FileChunk  SHA224Final  SHA224Init  SHA256Data  (+1763 more)
hoisting/nick-dataflow/libc-wp/libc-syscall-locs/: mmap-loc  open-loc  sysctl-loc
hoisting/nick-dataflow/libc-wp/scripts-backup/: libcag-old
hoisting/nick-dataflow/scripts/: ast_generator.py  ast_printer.py
hoisting/nick-dataflow/test/futurefunctions/c/: 10setsocketoptexample.c  dummyTextFile.txt
hoisting/nick-dataflow/test/hoist/: 01straight.bc  01straight.c  02-diamond-mem2reg.ll  02-diamond.c  02-diamond.ll  02multi-function.bc  03instr-dep.bc  03instr-dep.c  03instr-dep.ll  04-switchcase.c  04conditional-call.bc  04conditional-call.c  04conditional-call.ll  07-doublediamond.c  08-global.c  09-switch.c  11-loop-break.c  12-interproc.c  15-escapingstore.c  18-loopindep.c  19-recursionindep.c  24-gepop.c  27-callstack.c  28-interprocalias.c  30-stfunctionptr.c  a.out  else-if.bc  else-if.c  else-if.ll  merge.cpp
hoisting/nick-dataflow/tools/: CMakeLists.txt
hoisting/nick-dataflow/tools/callgraphanalyzer/: CMakeLists.txt  main.cpp
hoisting/nick-dataflow/tools/futurefunctions/: CMakeLists.txt  IndirectCallResolver.h  forward-main.cpp  futurefunctions.h  handler.cpp  hoist.cpp  main.cpp  taintAnalysis.cpp
hoisting/nick-dataflow/tools/hoist/: CMakeLists.txt  handler.cpp  hoist.cpp  libeventAnalyzer.cpp  taintAnalysis.cpp
hoisting/specifications.libc/: README.md  cal-results  finfo  fprinter  fprinter.v2  function-pledgenames  libc-function-names  libc-function-names-sorted  slaacd-functions-uniq  slaacd-generated-emplaces
hoisting/stdio_data/: MyGraph  callGraph2.py  callGraphs.py  callgraph-allfiles.txt  extractPrivileges.py  extractPrivileges2.py  function-promises  function-promises-test  function_bitvectors.inc  function_promises.csv  function_promises_bitvectors.csv  function_promises_bitvectors.inc  libC-emplace-stdio  libCemplace_stdio  pledge-table2.csv  promises.inc  stdio-bitset  stdio-callgraph  stdio_header
pledge-table/: a-wild-function-appears.txt  genSyscallWebMap.py  pledge-maybe.csv  pledge-table
test/: simplification.py
(+151 files in other folders)
